# mousepad

./: .clang-format  .cppcheck-false-positives  .gitignore  .scan-build-false-positives  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build  meson_options.txt  mousepad-settings.desktop.in.in  mousepad.desktop.in.in  org.xfce.mousepad-settings.desktop.in.in  org.xfce.mousepad.appdata.xml.in  org.xfce.mousepad.desktop.in  org.xfce.mousepad.desktop.in.in  org.xfce.mousepad.policy.in.in
build-aux/flatpak/: 1-build-and-install  2-run  3-uninstall  org.xfce.mousepad.yml
build-aux/flatpak/patches/: 0001-build-Replace-xdt-csource-with-glib-compile-resource.patch  0001-meson-build-Define-missing-dependencies-when-libgtop.patch  0002-build-Add-xdt-gen-visibility-to-get-rid-of-autotools.patch  Add-a-lifecycle-manager-to-xfconfd.patch  Xfconf-Allow-to-choose-an-alternative-service-name-prefix.patch
icons/: meson.build
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/64x64/: Makefile.am
icons/96x96/: Makefile.am
m4/: mousepad-plugin-gspell.m4  mousepad-plugin-shortcuts.m4  mousepad-plugin-skeleton.m4  mousepad-plugin-test.m4  mousepad-plugin-xfconf.m4
mousepad/: Makefile.am  main.c  meson.build  mousepad-action-group.c  mousepad-action-group.h  mousepad-app-activatable.c  mousepad-app-activatable.h  mousepad-application.c  mousepad-application.h  mousepad-close-button.c  mousepad-close-button.h  mousepad-dialogs.c  mousepad-dialogs.h  mousepad-document.c  mousepad-document.h  mousepad-encoding-dialog.c  mousepad-encoding-dialog.h  mousepad-encoding.c  mousepad-encoding.h  mousepad-file.c  mousepad-file.h  mousepad-history.c  mousepad-history.h  mousepad-marshal.list  mousepad-plugin-provider.c  mousepad-plugin-provider.h  mousepad-plugin.c  mousepad-plugin.h  mousepad-prefs-dialog.c  mousepad-prefs-dialog.glade  mousepad-prefs-dialog.h  mousepad-print.c  mousepad-print.h  mousepad-private.h  mousepad-replace-dialog.c  mousepad-replace-dialog.h  mousepad-search-bar.c  mousepad-search-bar.h  mousepad-settings-store.c  mousepad-settings-store.h  (+13 more)
mousepad/resources/: mousepad.gresource.xml
mousepad/resources/gtk/: menus-common.ui  menus.ui
mousepad/resources/ui/: mousepad-prefs-dialog.ui
plugins/: Makefile.am  meson.build
plugins/gspell-plugin/: Makefile.am  gspell-plugin.c  gspell-plugin.h  mousepad-plugin-gspell.c  org.xfce.mousepad.plugins.gspell.gschema.xml
plugins/helloworld/: Makefile.am  helloworld-configurable.c  helloworld-configurable.h  helloworld-plugin.c  helloworld-plugin.h  helloworld.plugin
plugins/shortcuts-plugin/: Makefile.am  mousepad-plugin-shortcuts.c  shortcuts-plugin.c  shortcuts-plugin.h
plugins/skeleton-plugin/: Makefile.am  mousepad-plugin-skeleton.c  org.xfce.mousepad.plugins.skeleton.gschema.xml  skeleton-plugin.c  skeleton-plugin.h
plugins/test-plugin/: Makefile.am  mousepad-plugin-test.c  test-plugin.c  test-plugin.h
plugins/xfconf-plugin/: Makefile.am  mousepad-plugin-xfconf.c  xfconf-plugin.c  xfconf-plugin.h
po/: ChangeLog  LINGUAS  POTFILES  POTFILES.in  am.po  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  ku.po  lo.po  lt.po  lv.po  ms.po  (+26 more)
tests/: functions-common.sh  functions-test.sh  mousepad-test
