option(
  'polkit',
  type: 'feature',
  value: 'auto',
  description: 'Polkit support',
)

option(
  'keyfile-settings',
  type: 'boolean',
  value: false,
  description: 'Use the GSettings keyfile backend rather than the default',
)

option(
  'gspell-plugin',
  type: 'feature',
  value: 'disabled',
  description: 'Spell checking support (GTK 3 only)',
)

option(
  'shortcuts-plugin',
  type: 'feature',
  value: 'disabled',
  description: 'Shortcut editor dialog support (GTK 3 only)',
)

option(
  'test-plugin',
  type: 'feature',
  value: 'disabled',
  description: 'Integration testing support (for developers)',
)
